--- a/index.html
+++ b/index.html
@@ -61,23 +61,28 @@ style="display:none;">
         </llll>
     </div><hr>
     <div class="mark1" id="allmembers"></div><hr>
+    
+    <h1 id="centering"></h1><p id="date" style="text-align:right;"></p>
+    <h1 id="head1">present</h1>
+    <div class="mark" id="present"></div>
+    <div id="list1">    </div><hr>
     <div id="centering">
         <button class="btn btn-primary" id="sharebtn">share</button>
         <button class="btn btn-info" id="copybtn">copy</button>
         <input id="texter" type="text">
     </div>
-    <h1 id="centering">list 1</h1><p id="date" style="text-align:right;"></p>
-    <div id="list1">    </div><hr>
-    <h1 id="head1">present</h1>
-    <div class="mark" id="present"></div><hr>
+    <hr><hr>
+    
+    <h1 id="centering"></h1><p id="date1" style="text-align:right;"></p>
+    <div class="mark1" id="absent"><h1 id="head2" >absent</h1></div>
+    <div id="list2">    </div><hr>
     <div id="centering">
         <button class="btn btn-primary" id="sharebtn2">share</button>
         <button class="btn btn-info" id="copybtn2">copy</button>
         <input id="texter2" type="text">
     </div>
-    <h1 id="centering">list 2</h1><p id="date1" style="text-align:right;"></p>
-    <div id="list2">    </div><hr>
-    <div class="mark1" id="absent"><h1 id="head2" >absent</h1></div>
+
+
       <script type="text/javascript" src="script.js"></script>
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
